--- a/doc/resources/jenkins/JenkinsFile
+++ b/doc/resources/jenkins/JenkinsFile
@@ -7,7 +7,7 @@ node {
         }
 
         stage('Build') {
-            bat 'mvn clean package'
+            mvn clean package
         }
 
         stage('Publish') {
