reverted to bat usage after installing maven on build machine

--- a/doc/resources/jenkins/JenkinsFile
+++ b/doc/resources/jenkins/JenkinsFile
@@ -7,7 +7,7 @@ node {
         }
 
         stage('Build') {
-            mvn clean package
+            bat 'mvn clean package'
         }
 
         stage('Publish') {
