--- a/doc/resources/jenkins/JenkinsFile
+++ b/doc/resources/jenkins/JenkinsFile
@@ -24,7 +24,8 @@ node {
             bat "az login --service-principal -u $AZURE_CLIENT_ID -p $AZURE_CLIENT_SECRET -t $AZURE_TENANT_ID"
             bat "az account set -s $AZURE_SUBSCRIPTION_ID"
             }
-            echo "Workspace : $env.WORKSPACE"
+            echo "Workspace : "
+            echo env.WORKSPACE
             bat "cd $env.WORKSPACE/target/azure-functions/odd-or-even-function-sample && zip -r ../../../archive.zip ./* && cd -"
             bat "az functionapp deployment source config-zip -g $RESOURCE_GROUP -n $FUNC_NAME --src archive.zip"
             bat 'az logout'
