--- a/doc/resources/jenkins/JenkinsFile
+++ b/doc/resources/jenkins/JenkinsFile
@@ -12,8 +12,8 @@ node {
 
         stage('Publish') {
             
-            def RESOURCE_GROUP = '<resource_group>' 
-            def FUNC_NAME = '<function_app>'
+            def RESOURCE_GROUP = 'Shredders2' 
+            def FUNC_NAME = 'shredders2functionapp'
             // login Azure
 
             withCredentials([
